external-crates/move/crates/move-compiler/tests/move_2024/expansion/ambiguous_attribute_value_invalid.move
module a::foo {
    use a::foo;

    public fun foo() {}

    // could resolve to module or module member
    #[ext(attr = foo)]
    fun t1() {}

    public struct S()
    // does not resolve to module access
    #[ext(attr = S::x)]
    fun t2() {}
}
